syntax = "proto3";
package confio.poe.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmwasm/wasm/v1beta1/genesis.proto";

option go_package = "github.com/confio/tgrade/x/poe/types";

// PoEContractType type of PoE contract
enum PoEContractType {
  UNDEFINED = 0;
  STAKING = 1;
  VALSET = 2;
  ENGAGEMENT = 3;
  MIXER = 4;
}
